syntax = "proto3";
package shared;
option go_package = "pkg/proto;shared_pb";

message ErrorDetail {
  string field = 1;
  string struct = 2;
  string tag = 3;
  string description = 4;
}